Fixed issue where image on About page was sized wrong on Firefox

--- a/src/components/Page/PageBody/About/About.scss
+++ b/src/components/Page/PageBody/About/About.scss
@@ -19,6 +19,7 @@
   color: #374457;
   font-size: 3rem;
   padding: 0.35rem;
+  padding-bottom: 2rem;
   font-family: Roboto, sans-serif;
 }
 
@@ -33,12 +34,12 @@
     text-align: left;
   }
 
-  // img{
-  //   width: 40%;
-  //   @include box-shadow(0 1px 5px rgba(0, 0, 0, 0.46));
-  //   border-radius: .1em;
-  //   // background: none repeat scroll 0 0 #E9E9E9;
-  // }
+  #about-image{
+    width: 20vw;
+    @include box-shadow(0 1px 5px rgba(0, 0, 0, 0.46));
+    border-radius: 50%;
+    // background: none repeat scroll 0 0 #E9E9E9;
+  }
 
   .about-table {
     display: flex;
